update the layout of the website

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,58 @@
-.App {
-  text-align: center;
+body {
+  background-color: #FDFDFF;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App {
+  font-family: "Helvetica Neue 45 Light", sans-serif;
+  font-size: 16px;
+  
+}
+
+h1,h2,h3 {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+h1 {
+  color: #393D3F;
+  position: absolute;
+  top: 16px;
+  left: 16px;
+}
+
+li {
+  display: inline-block;
+  margin-left: -2em; 
+  width: calc(100% + 1em);
+}
+
+a {
+  color: #4f57e2;
+}
+
+.content {
+  width: 100%;
+  max-width: 100%;
+  color: #393D3F;
+  margin: 3rem 1rem;
+}
+
+.row {
+  position: absolute;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+@media (max-width: 576px) {
+  #projects {
+    padding-top: 20px;
+  }
+  #contact {
+    margin-top: -15px;
   }
 }
 
@@ -22,17 +65,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
