--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,11 @@ a {
   position: absolute;
 }
 
+#contact {
+  margin-bottom: 30px;
+  margin-right: 16px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -48,6 +53,9 @@ a {
 }
 
 @media (max-width: 576px) {
+  .content {
+    margin-right: 1rem;
+  }
   #projects {
     padding-top: 20px;
   }
